--- a/index.html
+++ b/index.html
@@ -5,9 +5,18 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Rock Paper Scissors</title>
+  <!-- Here we run the script file -->
+  <script src="script.js" defer></script>
 </head>
 <body>
-  <!-- Here we run the script file -->
-  <script src="script.js"></script>
+    <button class="rock">Rock</button>
+    <button class="paper">Paper</button>
+    <button class="scissors">Scissors</button>
+    <div class="score-board">
+      <p class="user-play">User played: </p>
+      <p class="score">0 : 0</p>
+      <p class="computer-play">Compuer played: </p>
+      <p class="winner">----</p>
+    </div>
 </body>
 </html>
